<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">养爱车管家</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_order_center">订单中心</string>
    <string name="action_use_center">个人中心</string>
    <string name="action_leave">请假</string>
    <string name="action_version_update">版本更新</string>
    <string name="action_logout">退出登录</string>
    <string name="action_settings">设置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="total_num_str">总个数（<xliff:g id="total_num">%d</xliff:g>）</string>
    <string name="current_page_str">当前页码:<xliff:g id="current">%d</xliff:g>/<xliff:g id="total">%d</xliff:g></string>
    <string name="ratting_msg_str"><xliff:g id="ratting">%d</xliff:g>分</string>
    <string name="consumer_contact_str">客户 <xliff:g id="consumer">%s</xliff:g> 的联系方式</string>
</resources>
