<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/order_center"
            android:icon="@drawable/icon_mydingdan"
            android:title="@string/action_order_center" />
        <item
            android:id="@+id/nav_user_center"
            android:icon="@drawable/icon_about"
            android:title="@string/action_use_center" />
        <item
            android:id="@+id/nav_leave"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/action_leave" />
        <item
            android:id="@+id/nav_version"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/action_version_update" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/icon_set"
                android:title="@string/action_settings" />
        </menu>
    </item>

</menu>
